[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webhook_receive"
version = "0.1"
authors = [{ name = "Benjamin Falk" }]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pytest",
  "pytest-env",
  "requests",
  "httpx",
  "pytest-asyncio",
  "python-dotenv",
]
requires-python = ">=3.9"
description = "FastAPI application to process webhook events"
readme = "README.md"
license = { text = "Apache License (2.0)" }

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[project.urls]
Repository = "https://github.com/falkben/webhook_receive/"

[tool.pytest.ini_options]
env = [
  "DEPLOY_SCRIPTS_FILE = tests/data/test_deploy_script.json",
  "GITHUB_IPS_ONLY = false",
]
testpaths = ["tests"]

[tool.isort]
profile = "black"
